# mcsp

./: .gitignore  CMakeLists.txt  GNUmakefile  README.md
doc/: Doxyfile.in
misc/: pre-commit
src/: CMakeLists.txt  generator.cpp  generator.hpp
src/generator/: CMakeLists.txt  generator.cpp  generator.h  generator_test.cpp  gengraph.cpp
src/graph/: CMakeLists.txt  edge.cpp  edge.h  graph.cpp  graph.h  graph_test.cpp  node.cpp  node.h
src/parallel/: CMakeLists.txt  label_set.cpp  label_set.h  local_label_map.cpp  local_label_map.h  locking_vector.cpp  locking_vector.h  parallel.cpp  parallel.h  pmcsp.cpp
src/parallel_2D/: CMakeLists.txt  candidate.cpp  candidate.h  candidate_set.cpp  candidate_set.h  label_set.cpp  label_set.h  local_label_map.cpp  local_label_map.h  parallel_2D.cpp  parallel_2D.h  parallel_2D_test.cpp
src/pareto/: CMakeLists.txt  less.cpp  less.h  linked_queue.cpp  linked_queue.h  locked_set.cpp  locked_set.h  naive_linked_queue.cpp  naive_linked_queue.h  naive_set.cpp  naive_set.h  priority_linked_queue.cpp  priority_linked_queue.h  queue.h  set.h
src/sequential/: CMakeLists.txt  sequential.cpp  sequential.h  sequential_test.cpp  smcsp.cpp
src/sequential_pareto/: CMakeLists.txt  sequential_pareto.cpp  sequential_pareto.h  sequential_pareto_test.cpp
src/sp/: CMakeLists.txt  path.cpp  path.h  shortest_paths.cpp  shortest_paths.h
test/sequential/: CMakeLists.txt  sequential.cpp
